@@ -2,6 +2,7 @@
 
 	* py-gnumeric.c (py_obj_to_gnm_value): Handle python ints via
 	gnm_float, not int, so we handle larger numbers.
+	(gnm_value_to_py_obj): Use python's boolean type.
 
 	* python-loader.c (gplp_unload_service_function_group): Clear
 	python_fn_info_dict after unref so we don't do it again.
